react-app/src/pages/dashboard/dashboard.css
/* ... */
@keyframes loading-progress {
  0% {
    width: 0;
  }
  50% {
    width: 50%;
  }
  100% {
    width: 100%;
  }
}

.add-participants-container {
  background-color: #fff;
  border: 2px solid #b8bcc5;
  width: min(500px, 90vw);
  height: auto;
  max-height: 90vh;
  overflow-y: auto;
  padding: 2rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
  margin: 0 auto;
}

.add-participants-form {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
}

div.ignore-conflicts {
  margin: 1em 0;
}
div.ignore-conflicts p {
  text-align: center;
  margin: 0.5em 0;
}
div.ignore-conflicts-field {
  display: inline-block;
}

.file-drop-area {
  border: 2px dashed rgb(221, 210, 210);
  width: 100%;
  height: 200px;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  transition: background-color 0.3s ease-in-out;
}

.file-drop-text {
  text-align: center;
}

.file-drop-icon {
  font-size: 3rem;
  margin-bottom: 0.5rem;
}

.file-drop-description {
  font-size: 1rem;
}

.drag-over {
  background-color: rgba(0, 123, 255, 0.1);
}

.file-selected {
  border-color: #007bff;
}

.institution-label {
  font-size: 1.2rem;
  font-weight: bold;
  margin-bottom: 0.5rem;
}

input[type="text"],
input[type="file"] {
  border: 2px solid #ccc;
  border-radius: 2px;
  padding: 0.5rem;
  font-size: 1rem;
  width: 100%;
  transition: border-color 0.3s ease-in-out;
}

input[type="text"]:focus,
input[type="file"]:focus {
  border-color: #007bff;
}

input[type="text"][value]:not([value=""]),
input[type="file"][value]:not([value=""]) {
  border-color: #007bff;
}

.add-participants-inst {
  width: 200px;
  height: 60px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
}

.add-participants-input {
  width: 100%;
  max-width: 350px;
  margin: 10px;
}

@media (max-width: 1024px) {
  .no-tablet {
    display: none;
  }
}

@media (max-width: 768px) {
  .dashboard {
    flex-direction: column;
    padding: 1rem;
  }

  .dashboard--overview {
    width: 100%;
    order: -1;
  }

  .dashboard--overview--content {
    width: 100%;
  }

  .dashboard--projects {
    width: 100%;
  }

  .dashboard--question--table {
    width: 100%;
  }

  .dashboard--question--entry {
    width: 10vw;
  }

  .no-mobile {
    display: none;
  }

  .dashboard--overview-active-box {
    width: 90vw;
  }

  .filter-button {
    width: 30vw;
  }

  .dashboard--next--page span {
    width: 30vw;
    padding: 1rem;
  }

  .dashboard--button {
    height: auto;
    padding: 1.5rem 1rem;
    font-size: 1.2rem;
  }

  .create-add-container {
    flex-wrap: wrap;
    gap: 0.5rem;
  }
}

